// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Button Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  isSplit={true}
  onClick={false}
  size="small"
  type="link"
>
  <NodeFixture />
  <Select
    Button={[Function]}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "name": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label=""
    onSelectClick={[MockFunction]}
  />
  <ForwardRef
    alt="loading"
    src="../images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when array prop "items" is an empty array: "[]" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  isSplit={true}
  onClick={false}
  size="small"
  type="link"
>
  <NodeFixture />
  <Select
    Button={[Function]}
    items={Array []}
    label=""
    onSelectClick={[MockFunction]}
  />
  <ForwardRef
    alt="loading"
    src="../images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={false}
  isSplit={true}
  onClick={[MockFunction]}
  size="small"
  type="link"
>
  <NodeFixture />
  <Select
    Button={[Function]}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "name": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label=""
    onSelectClick={[MockFunction]}
  />
  <ForwardRef
    alt="loading"
    src="../images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  isSplit={false}
  onClick={false}
  size="small"
  type="link"
>
  <NodeFixture />
  <ForwardRef
    alt="loading"
    src="../images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "loading" is set to: "false" 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  isSplit={true}
  onClick={false}
  size="small"
  type="link"
>
  <NodeFixture />
  <Select
    Button={[Function]}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "name": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label=""
    onSelectClick={[MockFunction]}
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed all props 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={true}
  isSplit={true}
  onClick={false}
  size="small"
  type="link"
>
  <NodeFixture />
  <Select
    Button={[Function]}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "name": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label=""
    onSelectClick={[MockFunction]}
  />
  <ForwardRef
    alt="loading"
    src="../images/loading-gray.svg"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed only required props 1`] = `
<ForwardRef
  aria-label="jest-auto-snapshots String Fixture"
  disabled={false}
  isSplit={false}
  onClick={[MockFunction]}
  size="medium"
  type="link"
>
  <NodeFixture />
</ForwardRef>
`;
